--- a/csc470/views/classes/current.ejs
+++ b/csc470/views/classes/current.ejs
@@ -23,6 +23,7 @@
 			</div> <!--- .col ---!>
 		</div> <!--- .row ---!>
 
+		<div style="padding-top:5px;">
 		<% if (classList[i]._preRequisites.length > 0) { %>
 			<div class="row">
 				<p class="col-md-push-1 col-md-10 text-justify">
@@ -37,8 +38,9 @@
 				<%= classList[i]._description %>
 			</p> <!--.col -->
 		</div><!-- row --> 
+		</div>
 		<div class="dropdown">
-			<button class="btn btn-secondary btn-sm dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
+			<button class="btn btn-primary btn-md dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
 				In Progress
 			</button>
 			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -86,6 +88,7 @@
 			</div> <!--- .col ---!>
 		</div> <!--- .row ---!>
 
+		<div style="padding-top:5px;">
 		<% if (classList[i]._preRequisites.length > 0) { %>
 			<div class="row">
 				<p class="col-md-push-1 col-md-10 text-justify">
@@ -100,8 +103,10 @@
 				<%= classList[i]._description %>
 			</p> <!--.col -->
 		</div><!-- row --> 
+		</div>
+
 		<div class="dropdown">
-			<button class="btn btn-secondary btn-sm dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
+			<button class="btn btn-info btn-md dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
 				Registered
 			</button>
 			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -149,6 +154,7 @@
 			</div> <!--- .col ---!>
 		</div> <!--- .row ---!>
 
+		<div style="padding-top:5px;">
 		<% if (classList[i]._preRequisites.length > 0) { %>
 			<div class="row">
 				<p class="col-md-push-1 col-md-10 text-justify">
@@ -163,8 +169,10 @@
 				<%= classList[i]._description %>
 			</p> <!--.col -->
 		</div><!-- row --> 
+		</div>
+
 		<div class="dropdown">
-			<button class="btn btn-secondary btn-sm dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
+			<button class="btn btn-warning btn-md dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
 				Waitlisted
 			</button>
 			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -211,13 +219,25 @@
 			</div> <!--- .col ---!>
 		</div> <!--- .row ---!>
 
+		<div style="padding-top:5px;">
+		<% if (classList[i]._preRequisites.length > 0) { %>
+			<div class="row">
+				<p class="col-md-push-1 col-md-10 text-justify">
+					Prerequisites:
+					<%= classList[i]._preRequisites %>
+				</p> <!--.col -->
+			</div>
+		<% } %>
+
 		<div class="row">
 			<p class="col-md-10 text-justify col-md-push-1">
 				<%= classList[i]._description %>
 			</p> <!--.col -->
 		</div><!-- row --> 
+		</div>
+
 		<div class="dropdown">
-			<button class="btn btn-secondary btn-sm dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
+			<button class="btn btn-success btn-md dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
 				Completed
 			</button>
 			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -264,6 +284,7 @@
 			</div> <!--- .col ---!>
 		</div> <!--- .row ---!>
 
+		<div style="padding-top:5px;">
 		<% if (classList[i]._preRequisites.length > 0) { %>
 			<div class="row">
 				<p class="col-md-push-1 col-md-10 text-justify">
@@ -278,8 +299,10 @@
 				<%= classList[i]._description %>
 			</p> <!--.col -->
 		</div><!-- row --> 
+		</div>
+
 		<div class="dropdown">
-			<button class="btn btn-secondary btn-sm dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
+			<button class="btn btn-danger btn-md dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
 				Still Needed
 			</button>
 			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -313,6 +336,7 @@
 		</div>
 	</div> <!-- list-group-item col-md-10 col-md-push-1 col-md-pull-1 -->
 	<% } %>
+
 	</ul> <!-- listgroup -->
 </div>
 </body>
